3 column boxes fixed to fit on smaller screens

--- a/app/styles/components/layout/boxes.scss
+++ b/app/styles/components/layout/boxes.scss
@@ -76,10 +76,6 @@ layout-boxes {
 	&[large] content {
 
 		@include media(max-width-1150) {
-			grid-template-columns:repeat(2, 1fr);
-		}
-
-		@include media(max-width-780) {
 			grid-template-columns:repeat(1, 1fr);
 		}
 
